# Rogue-Robots

./: Asset_README.txt  license.md
Offline-Tools/AssetManager/: .gitignore  CMakeLists.txt  CMakeSettings.json
Offline-Tools/AssetManager/include/: Assets.h  pch.h
Offline-Tools/AssetManager/src/: AssetManager.h  main.cpp
Rogue-Robots/: .gitignore  BehaviorTree_Scorpio.dot  CMakeLists.txt  CMakeSettings.json  Generate.txt  ParticleMeasurements - Preserve.csv  ParticleMeasurements.csv  README.md  imgui.ini  rendergraph.txt  test.lua
Rogue-Robots/Assets/: .gitignore  FlashLight1.glb  magenta_cube.glb  rendergraph.txt  suzanne.glb  temp_Robot.fbx  tweaked_settings.txt
Rogue-Robots/Assets/Levels/: Bridge.txt  Generate.txt  Tunnels_generatedLevel.txt  largerTest1Output_Floors.txt
Rogue-Robots/Assets/LuaScripts/: ActiveItemSystem.lua  ActiveItems.lua  Agent.lua  AgentHit.lua  BarrelComponents.lua  DroptableScript.lua  DummyEnemy.lua  EventSystem.lua  ExplosionEffect.lua  GameStateManager.lua  Gun.lua  GunLegacy.lua  LuaStartUp.lua  LuaTest.lua  MagazineComponents.lua  MaterialPrefabs.lua  MiscComponents.lua  Object.lua  PassiveItemSystem.lua  PassiveItems.lua  Pickupable.lua  Player.lua  PlayerStats.lua  ProfileGlobalLua.lua  ProfilingLua.lua  ProfilingLua_BubbleSort.lua  ProfilingLua_CallCPPFunction.lua  ProfilingLua_Fact.lua  ProfilingLua_ForLoopAdd.lua  ProfilingLua_SendData.lua  ScriptTest.lua  Trampoline.lua  VectorMath.lua
Rogue-Robots/Assets/Models/Ammunition/: jet.glb  missile.glb
Rogue-Robots/Assets/Models/BunkerModularBlocks/: CornerFloor1.gltf  CornerRoof1.gltf  CornerRoofHanging1.gltf  CornerWall1.gltf  Floor1.gltf  InnerCornerFlat1.gltf  InnerCornerHanging.gltf  Roof1.gltf  RoofWallInnerCorner.gltf  TunnelCross1.gltf  TunnelStraight1.gltf  TunnelT1.gltf  TunnelT2.gltf  Wall1.gltf  WallFloor1.gltf  WallFloorInnerCorner.gltf  WallFloorTunnelEntrance1.gltf  WallInnerCorner.gltf  WallRoof1.gltf  WallRoofHanging1.gltf  WallToRoofCorner1.gltf
Rogue-Robots/Assets/Models/Enemies/: enemy.gltf  enemy1.gltf
Rogue-Robots/Assets/Models/Modular Blocks/: Bridge1.fbx  CliffCorner1.fbx  CliffCorner2.fbx  CornerFloor1.fbx  CornerRoof1.fbx  CornerWall1.fbx  Floor1.fbx  FloorBridge2.fbx  FloorCliff1.fbx  Riverbed1.fbx  Roof1.fbx  ShelfEnd1.fbx  T_FloorTiles_B.TGA  T_Generic_colors.TGA  Wall1.fbx  WallRoof1.fbx
Rogue-Robots/Assets/Models/ModularBlocks/: 3DCrossConnector.fbx  3DCrossConnector.gltf  3DCrossConnector_Col.fbx  3DCrossConnector_Col.gltf  4DownConnector.fbx  4DownConnector.gltf  4DownConnector_Col.fbx  4DownConnector_Col.gltf  4UpConnector.fbx  4UpConnector.gltf  4UpConnector_Col.fbx  4UpConnector_Col.gltf  4UpDownConnector.fbx  4UpDownConnector.gltf  4UpDownConnector_Col.fbx  4UpDownConnector_Col.gltf  5NoDownConnector.fbx  5NoDownConnector.gltf  5NoDownConnector_Col.fbx  5NoDownConnector_Col.gltf  5NoSideConnector.fbx  5NoSideConnector.gltf  5NoSideConnector_Col.fbx  5NoSideConnector_Col.gltf  5NoUpConnector.fbx  5NoUpConnector.gltf  5NoUpConnector_Col.fbx  5NoUpConnector_Col.gltf  Bridge1.fbx  Bridge1.gltf  Bridge1_Col.fbx  Bridge1_Col.gltf  Bridge2.fbx  Bridge2.gltf  Bridge2_Col.fbx  Bridge2_Col.gltf  Cliff1.fbx  Cliff1.gltf  Cliff1_Col.fbx  Cliff1_Col.gltf  (+342 more)
Rogue-Robots/Assets/Models/ModularRifle/: ChargeShot.gltf  Fire.gltf  Frost.gltf  FullAuto.glb  FullAuto.gltf  Grenade.gltf  Laser.gltf  Liquid.gltf  MainWeapon.gltf  Maingun.gltf  Missile.gltf  Radar.gltf  Scatter.gltf  Tesla.gltf
Rogue-Robots/Assets/Models/Pickups/: JumpBoost.glb  Medkit.glb  Reviver.glb  Syringe.glb  Trampoline.glb
Rogue-Robots/Assets/Models/Rifle/: license.txt  scene.gltf
Rogue-Robots/Assets/Models/Temporary_Assets/: Door.gltf  Explosion.glb  Health.glb  TempJumBoostglb.glb  Trampoline.glb  blue_cube.glb  green_cube.glb  iso_sphere.glb  missile.glb  red_cube.glb  speedPassive.glb  speedPassive2.glb  turret.glb  turret2.glb  turretBase.glb
Rogue-Robots/Assets/ParticleSystems/: Dust.lua
Rogue-Robots/Assets/Player/: flashlightsubmesh.fbx  jaghatardig.fbx  jaghatardig2.fbx  jaghatardig3.fbx  please.fbx
Rogue-Robots/Assets/Shaders/: AcesTonemapping.hlsli  BlitPS.hlsl  BloomCS.hlsl  BloomDebug.hlsl  BloomDownSample.hlsl  BloomDownSample2.hlsl  BloomSelect.hlsl  BloomUpSample.hlsl  BoxBlurCS.hlsl  ColorOutlinePS.hlsl  ColorOutlineVS.hlsl  DamageDiskPS.hlsl  HeartbeatPS.hlsl  LaserPS.hlsl  LaserVS.hlsl  MainPS.hlsl  MainVS.hlsl  OutlineBlitPS.hlsl  PBRHelpers.hlsli  RippleEffectCS.hlsl  ShaderInterop_Base.h  ShaderInterop_Common.h  ShaderInterop_Lights.hlsli  ShaderInterop_Material.h  ShaderInterop_Math.hlsli  ShaderInterop_Mesh.h  ShaderInterop_Renderer.h  ShaderInterop_Samplers.hlsli  ShadowGS.hlsl  ShadowVS.hlsl  TestComputeCS.hlsl  TiledLightCullingCS.hlsl  TiledLightCullingVisualizationCS.hlsl  WeaponVS.hlsl  ZPrePassVS.hlsl  ssaoCS.hlsl
Rogue-Robots/Assets/Shaders/Particles/: AliveMarkerCS.hlsl  BasicUpdateCS.hlsl  CompactionCS.hlsl  EmitterCS.hlsl  ParticlePS.hlsl  ParticleSortCS.hlsl  ParticleUpdateCS.hlsl  ParticleVS.hlsl  Particles.hlsli  PostEmitCS.hlsl
Rogue-Robots/Assets/TextureProcessor/: grab_texture_list.ps1  jpgs_to_process.txt  pngs_to_process.txt  remove_dds.ps1  setPolicy.txt
Rogue-Robots/DOGEngine/: CMakeLists.txt  DOGEngine.h  EntryPoint.h
Rogue-Robots/DOGEngine/src/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  pch.h
Rogue-Robots/DOGEngine/src/Audio/: Audio.cpp  Audio.h  AudioDevice.cpp  AudioDevice.h  AudioFileReader.cpp  AudioFileReader.h  AudioManager.cpp  AudioManager.h  AudioPlayerComponent.h  SourceVoice.cpp  SourceVoice.h  SourceVoiceCallback.h
Rogue-Robots/DOGEngine/src/Core/: AnimationManager.cpp  AnimationManager.h  Animator.cpp  Animator.h  Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  AssimpImporter.cpp  AssimpImporter.h  BoneJovi.cpp  BoneJovi.h  CoreUtils.h  CustomMaterialManager.cpp  CustomMaterialManager.h  CustomMeshManager.cpp  CustomMeshManager.h  DOGEngineTypes.cpp  DOGEngineTypes.h  DataPiper.cpp  DataPiper.h  Scene.cpp  (+21 more)
Rogue-Robots/Runtime/: CMakeLists.txt  Runtime.ini  Settings.lua
(+512 files in other folders)
